<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_mode_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/Jalkster.TextView.Heading"
        android:text="@string/mode_timer_placeholder"
        android:textStyle="bold"
        android:textSize="32sp"
        android:padding="16dp" />

    <GridLayout
        android:id="@+id/grid_mode_totals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:columnCount="2"
        android:alignmentMode="alignBounds">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/live_jog_time_label"
            style="@style/Jalkster.TextView.Body"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/live_jog_reps_label"
            style="@style/Jalkster.TextView.Body"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_jog_time_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="00:00"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_jog_reps_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="0"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/live_walk_time_label"
            style="@style/Jalkster.TextView.Body"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/live_walk_reps_label"
            style="@style/Jalkster.TextView.Body"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_walk_time_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="00:00"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_walk_reps_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="0"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/live_rest_time_label"
            style="@style/Jalkster.TextView.Body"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/live_rest_reps_label"
            style="@style/Jalkster.TextView.Body"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_rest_time_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="00:00"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_rest_reps_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="0"
            android:textSize="32sp"
            android:textStyle="bold" />
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_jog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            style="@style/Jalkster.Button"
            android:text="@string/jog_label"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_walk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            style="@style/Jalkster.Button"
            android:text="@string/walk_label"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_rest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            style="@style/Jalkster.Button"
            android:text="@string/rest_label"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_pause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            style="@style/Jalkster.Button"
            android:text="@string/pause_label"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_resume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            style="@style/Jalkster.Button"
            android:text="@string/resume_label"
            android:textAllCaps="false"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Jalkster.Button"
            android:text="@string/stop_label"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>
